--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,19 @@
-name: flutter_redux
+name: flutterredux
 description: A new Flutter project.
 
 dependencies:
   flutter:
-    sdk: flutter
+    sdk: flutter  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
+  redux: "^2.1.1"
+  flutter_redux: "^0.3.5"
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-
+    sdk: flutter  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
