Added proxy authentication stuff.  Fighting with different versions of cloud firestone to get it to compile

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,1 +1,9 @@
 org.gradle.jvmargs=-Xmx1536M
+systemProp.http.proxyPort=8080
+systemProp.http.proxyUser=atco\\u6f2
+systemProp.http.proxyPassword=Udread2032
+systemProp.https.proxyPassword=Udread2032
+systemProp.https.proxyHost=proxy
+systemProp.http.proxyHost=proxy
+systemProp.https.proxyPort=8080
+systemProp.https.proxyUser=atco\\u6f2
